k8s/10-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: primeiro-emprego
  labels:
    app.kubernetes.io/name: primeiro-emprego
    app.kubernetes.io/component: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: primeiro-emprego
      app.kubernetes.io/component: api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: primeiro-emprego
        app.kubernetes.io/component: api
    spec:
      containers:
        - name: api
          image: docker.vitorsouzadasilva.tech/vitorsouzadasilva/primeiro-emprego-api:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3333
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            capabilities:
              drop: ["ALL"]
