k8s/20-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: primeiro-emprego
  labels:
    app.kubernetes.io/name: primeiro-emprego
    app.kubernetes.io/component: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: primeiro-emprego
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: primeiro-emprego
        app.kubernetes.io/component: web
    spec:
      containers:
        - name: web
          image: docker.vitorsouzadasilva.tech/vitorsouzadasilva/primeiro-emprego-web:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          resources:
            requests:
              cpu: 20m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
