k8s/11-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: primeiro-emprego
spec:
  selector:
    app.kubernetes.io/name: primeiro-emprego
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 80
      targetPort: http
