k8s/21-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: primeiro-emprego
spec:
  selector:
    app.kubernetes.io/name: primeiro-emprego
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
